fixing right extra space

--- a/src/scss/_righttoc.scss
+++ b/src/scss/_righttoc.scss
@@ -5,7 +5,7 @@
 .bd-toc {
     padding: 0px !important;
     overflow-y: visible;
-    right: 0;
+    right: -1em;
     z-index: 999;
     transition: height .35s ease;
 
