--- a/src/scss/_topbar.scss
+++ b/src/scss/_topbar.scss
@@ -16,6 +16,7 @@
     .topbar-main {
         padding-top: 0.25rem;
         padding-bottom: 0.25rem;
+        padding-right: 0;
 
         > button, > div, > a {
             float: left;
